--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: node_js
 node_js: - '12.18'
 cache: npm
-scripts: 
-  npm run test:unit
-before_deploy: 
-  npm run build
+script: 
+  - npm run test:unit
+after_success: 
+  - npm run build
 deploy:
   provider: heroku
   skip_cleanup: true
   api_key:
-    secure: ce9f509f-7f90-49c9-a915-8183e986839c
+    secure: $TOKEN
   app: 'unittodolists'
   on:
     branch: master
