--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: - '12.18'
 cache: npm
 script: 
-  - npm test
+  - npm run test:unit
 after_success: 
   - npm run build
 deploy:
@@ -10,6 +10,6 @@ deploy:
   skip_cleanup: true
   api_key:
     secure: $TOKEN
-  app: 'unittodolists'
+  app: unittodolists
   on:
     branch: master
