--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,9 @@ workflows:
           filters:
             branches:
               only: sequential-branch-filter
+jobs:
+  build:
+    docker:
+      - image: circleci/ruby:2.4-node
+      - image: circleci/postgres:9.4.12-alpine
+    working_directory: ~/circleci-demo-workflows
