--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,6 @@ jobs:
       - image: circleci/ruby:2.4-node
       - image: circleci/postgres:9.4.12-alpine
     working_directory: ~/circleci-demo-workflows
+    steps:
+      - checkout
+      
