--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,21 @@
-orbs:
-  heroku: circleci/heroku@1.2.2
 version: 2.1
+orbs:
+  node: circleci/node@1.1
+  heroku: circleci/heroku@1.2.2
+jobs:
+  build:
+    executor:
+      name: node/default
+      tag: '10.4'
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: npm run test:unit
 workflows:
   heroku_deploy:
     jobs:
       - heroku/deploy-via-git:
-          post-steps:
-            - run: npm run build
           pre-steps:
-            - run: npm run test:unit
+            - run: npm run build
