--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
-version: 2.1
 orbs:
   node: circleci/node@1.1
   heroku: circleci/heroku@1.2.2
+version: 2.1
 jobs:
   build:
+    docker:
+      - image: buildpack-deps:trusty
     executor:
       name: node/default
       tag: '10.4'
