--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,11 @@
 #           steps:
 #             - run: npm install
 #       - run: npm run test:unit
-# workflows:
-#   heroku_deploy:
-#     jobs:
-#       - heroku/deploy-via-git:
-#           pre-steps:
-#             - run: npm run build
+
 version: 2.1
+orbs:
+  node: circleci/node@1.1
+  heroku: circleci/heroku@1.2.2
 jobs:
   build:
     docker:
@@ -44,4 +42,10 @@ jobs:
     - run:
         name: running unit tests
         command: npm run test:unit
+workflows:
+  heroku_deploy:
+    jobs:
+      - heroku/deploy-via-git:
+          pre-steps:
+            - run: npm run build
     
