--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,15 @@ jobs:
     - run:
         name: running unit tests
         command: npm run test:unit
-workflows:
-  heroku_deploy:
-    jobs:
-      - heroku/deploy-via-git:
-          pre-steps:
-            - run: npm run build
+    heroku_deploy:
+      jobs:
+       - heroku/deploy-via-git:
+            pre-steps:
+              - run: npm run build
+# workflows:
+#   heroku_deploy:
+#     jobs:
+#       - heroku/deploy-via-git:
+#           pre-steps:
+#             - run: npm run build
     
