--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,11 +42,11 @@ jobs:
     - run:
         name: running unit tests
         command: npm run test:unit
-    heroku_deploy:
-      jobs:
-       - heroku/deploy-via-git:
-            pre-steps:
-              - run: npm run build
+    # heroku_deploy:
+    #   jobs:
+    #    - heroku/deploy-via-git:
+    #         pre-steps:
+    #           - run: npm run build
 # workflows:
 #   heroku_deploy:
 #     jobs:
