--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,17 @@
-# orbs:
-#   node: circleci/node@1.1
-#   heroku: circleci/heroku@1.2.2
-# version: 2.1
-# jobs:
-#   build:
-#     docker:
-#       - image: buildpack-deps:trusty
-#     executor:
-#       name: node/default
-#       tag: '10.4'
-#     steps:
-#       - checkout
-#       - node/with-cache:
-#           steps:
-#             - run: npm install
-#       - run: npm run test:unit
-
 version: 2.1
 orbs:
   node: circleci/node@1.1
   heroku: circleci/heroku@1.2.2
+workflows:
+  heroku_deploy:
+    jobs:
+      - build
+      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
+          requires:
+            - build
+          filters:
+            branches:
+              only: sequential-branch-filter
 jobs:
   build:
     docker:
@@ -42,15 +34,4 @@ jobs:
     - run:
         name: running unit tests
         command: npm run test:unit
-    heroku_deploy:
-      jobs:
-       - heroku/deploy-via-git:
-            pre-steps:
-              - run: npm run build
-# workflows:
-#   heroku_deploy:
-#     jobs:
-#       - heroku/deploy-via-git:
-#           pre-steps:
-#             - run: npm run build
     
