--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1
-  heroku: circleci/heroku@1.2.2
+  heroku: circleci/heroku@0.0.10. 
 workflows:
   heroku_deploy:
     jobs:
@@ -34,4 +34,3 @@ jobs:
     - run:
         name: running unit tests
         command: npm run test:unit
-    
