--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,8 @@ jobs:
         paths:
         - ./node_modules
     - run:
+        name: setting a default heroku build pack
+        command: heroku buildpacks:set heroku/nodejs
+    - run:
         name: running unit tests
         command: npm run test:unit
