removed heroku buildpack

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
     - run:
         name: install npm dependencies
         command: npm install
-    - save_cache: # special step to save the dependency cache
+    - save_cache: # special step to save the dependency 
         key: dependency-cache-{{ checksum "package.json" }}
         paths:
         - ./node_modules
