--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1
   heroku: circleci/heroku@0.0.10
+  coveralls: coveralls/coveralls@1.0.6
 workflows:
   heroku_deploy:
     jobs:
@@ -30,3 +31,4 @@ jobs:
     - run:
         name: running unit tests
         command: npm run test:unit
+    - coveralls/upload
