--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
     docker:
     - image: circleci/node:11.8-browsers
     steps:
-    - checkout # special step to check out source code to working directory
+    - checkout # special step to check out source code to working directo
     - restore_cache: # special step to restore the dependency cache
         key: dependency-cache-{{ checksum "package.json" }}
     - run:
