npm run coveralls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
         command: npm run test:unit
     - run: # run code coverage report
           name: code-coverage
-          command: npm run coverage
+          command: npm run coveralls
     - coveralls/upload
 notify:
   webhooks:
