--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:unit": "nyc vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "coveralls": "nyc npm run test:unit",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "start": "node server.js"
   },
   "dependencies": {
