--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,25 +36,21 @@ jobs:
     - run: # run code coverage report
           name: code-coverage
           command: npm run coveralls
-
-
-    - coveralls/upload:
-        parallel: true
-        flag_name: Test 2
+    - coveralls/upload
     
-commands:
-  upload:
-    parameters:
-      path_to_lcov:
-        description: >
-          Local path to the lcov output file produced by your test suite.
-          An error will be thrown if the file can't be found. This is the file that will be sent to the Coveralls API.
-        type: string
-        default: ./coverage/lcov.info
-      token:
-        description: Your Coveralls Repo token defined in your Circle's Environment Variables.
-        type: env_var_name
-        default: COVERALLS_REPO_TOKEN
+# commands:
+#   upload:
+#     parameters:
+#       path_to_lcov:
+#         description: >
+#           Local path to the lcov output file produced by your test suite.
+#           An error will be thrown if the file can't be found. This is the file that will be sent to the Coveralls API.
+#         type: string
+#         default: ./coverage/lcov.info
+#       token:
+#         description: Your Coveralls Repo token defined in your Circle's Environment Variables.
+#         type: env_var_name
+#         default: COVERALLS_REPO_TOKEN
 notify:
   webhooks:
     - url: https://coveralls.io/webhook?repo_token=${COVERALLS_REPO_TOKEN}
