--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:unit": "nyc vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "coveralls": "nyc npm run test:unit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "node server.js"
   },
   "dependencies": {
@@ -33,7 +33,6 @@
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
-    "coveralls": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
