--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,20 +37,20 @@ jobs:
           name: code-coverage
           command: npm run coveralls
     # - coveralls/upload
-    
-commands:
-  upload:
-    parameters:
-      path_to_lcov:
-        description: >
-          Local path to the lcov output file produced by your test suite.
-          An error will be thrown if the file can't be found. This is the file that will be sent to the Coveralls API.
-        type: string
-        default: ./coverage/lcov.info
-      token:
-        description: Your Coveralls Repo token defined in your Circle's Environment Variables.
-        type: env_var_name
-        default: COVERALLS_REPO_TOKEN
+jobs:    
+    commands:
+      upload:
+        parameters:
+          path_to_lcov:
+            description: >
+              Local path to the lcov output file produced by your test suite.
+              An error will be thrown if the file can't be found. This is the file that will be sent to the Coveralls API.
+            type: string
+            default: ./coverage/lcov.info
+          token:
+            description: Your Coveralls Repo token defined in your Circle's Environment Variables.
+            type: env_var_name
+            default: COVERALLS_REPO_TOKEN
 notify:
   webhooks:
     - url: https://coveralls.io/webhook?repo_token=${COVERALLS_REPO_TOKEN}
