--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,19 @@
+
 version: 2.1
 orbs:
-  node: circleci/node@1.1 // node orb 
-  heroku: circleci/heroku@0.0.10 // heroku orb
-  coveralls: coveralls/coveralls@1.0.6 // coveralls orb
+  coveralls: coveralls/coveralls@1.0.6
+  node: circleci/node@1.1
+  heroku: circleci/heroku@0.0.10
 workflows:
   heroku_deploy:
     jobs:
       - build
       - heroku/deploy-via-git: # Use the pre-configured job
-        requires:
-          - build
-        filters:
-          branches:
-            only: master
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
 jobs:
   build:
     docker:
@@ -22,7 +23,7 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: install-npm-dependencies
+          name: install-dependencies
           command: npm install
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
@@ -31,10 +32,9 @@ jobs:
       - run: # run tests
           name: test
           command: npm run test:unit
-      - run: # run tests
-          name: test
-          command: npm run build
+      - run: 
+           name: build
+           command: npm run build
       - run: # run code coverage report
           name: code-coverage
           command: npm run coveralls
-      # - coveralls/upload
